--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="phone_number">Phone Number</string>
     <string name="go_to_payment"><![CDATA[GO TO PAYMENT -->]]></string>
     <string name="register">Register</string>
+    <string name="add_to_cart">Add to Cart</string>
 </resources>
